--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <nav>
+            <a href="/">WebStudio</a>
+
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
+
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+
+    </header>
+    <!--секция 1-->
+    <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button>Заказать услугу</button>
+    </section>
+    <!--Здесь заголовок должен быть скрыт-->
+    <section>
+        <h2>Особенности</h2>
+        <ul>
+            <li>
+                <h3>Внимание к деталям</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>Пунктуальность</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h3>Планирование</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h3>Современные технологии</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
+    <!--секция 3-->
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li><img src="./image/img.jpg" alt="набор текста" width="370" height="294">
+            </li>
+            <li><img src="./image/img(1).jpg" alt="работа над макетом" width="370" height="294">
+            </li>
+            <li><img src="./image/img(2).jpg" alt="работа с цветом" width="370" height="294">
+            </li>
+        </ul>
+
+    </section>
+    <!--секция 4-->
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li><img src="./image/foto1.jpg" alt="дизайнер проекта" width="270" height="260">
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designer</p>
+            </li>
+            <li><img src="./image/foto2.jpg" alt="разработчик" width="270" height="260">
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
+            </li>
+            <li><img src="./image/foto3.jpg" alt="маркетолог" width="270" height="260">
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
+            </li>
+            <li><img src="./image/foto4.jpg" alt="дизайнер" width="270" height="260">
+                <h3>Михаил Ермаков</h3>
+                <p>UI Designer</p>
+            </li>
+
+        </ul>
+
+    </section>
+    <!--подвал нижняя часть-->
+    <footer>
+        <a href="/">WebStudio</a>
+        <address>
+
+        </address>
+    </footer>
+
+
 </body>
+
 </html>
